# 3mf-view

./: .clang-format  CMakeLists.txt  LICENSE  conanfile.txt
cmake/Modules/: DiscoverTests.cmake  DiscoverTestsImpl.cmake
src/: main.cpp
